// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Module configuration > nested complex route 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "path": "/ja/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "i18n": {
      "fr": false,
    },
    "locale": "fr",
    "meta": {
      "__i18n": false,
    },
    "path": "/fr/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "services-coaching___en",
    "path": "/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "services-coaching___ja",
    "path": "/ja/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "i18n": {
      "fr": false,
    },
    "locale": "fr",
    "meta": {
      "__i18n": false,
    },
    "name": "services-coaching___fr",
    "path": "/fr/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "i18n": {
      "en": false,
    },
    "locale": "en",
    "meta": {
      "__i18n": false,
    },
    "name": "services-development-app___en",
    "path": "/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "services-development-app___ja",
    "path": "/ja/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "i18n": {
      "fr": false,
    },
    "locale": "fr",
    "meta": {
      "__i18n": false,
    },
    "name": "services-development-app___fr",
    "path": "/fr/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "services-development___en",
    "path": "/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "services-development___ja",
    "path": "/ja/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "i18n": {
      "fr": false,
    },
    "locale": "fr",
    "meta": {
      "__i18n": false,
    },
    "name": "services-development___fr",
    "path": "/fr/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "services-development-website___en",
    "path": "/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "services-development-website___ja",
    "path": "/ja/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "i18n": {
      "fr": false,
    },
    "locale": "fr",
    "meta": {
      "__i18n": false,
    },
    "name": "services-development-website___fr",
    "path": "/fr/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "services___en",
    "path": "/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "i18n": {
      "ja": false,
    },
    "locale": "ja",
    "meta": {
      "__i18n": false,
    },
    "name": "services___ja",
    "path": "/ja/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "i18n": {
      "fr": false,
    },
    "locale": "fr",
    "meta": {
      "__i18n": false,
    },
    "name": "services___fr",
    "path": "/fr/services",
  },
]
`;

exports[`Module configuration > nested dynamic route 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/[nested]/[route]/index.vue",
    "i18n": {
      "en": false,
    },
    "locale": "en",
    "meta": {
      "__i18n": false,
    },
    "name": "nested-route___en",
    "path": "/:nested/:route",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/[nested]/[route]/index.vue",
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "nested-route___ja",
    "path": "/ja/:nested/:route",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/[nested]/[route]/index.vue",
    "i18n": {
      "fr": undefined,
    },
    "locale": "fr",
    "name": "nested-route___fr",
    "path": "/fr/:nested/:route",
  },
]
`;

exports[`Module configuration > nested static route 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/nested/route/index.vue",
    "i18n": {
      "en": false,
    },
    "locale": "en",
    "meta": {
      "__i18n": false,
    },
    "name": "nested-route___en",
    "path": "/nested/route",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/nested/route/index.vue",
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "nested-route___ja",
    "path": "/ja/nested/route",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/nested/route/index.vue",
    "i18n": {
      "fr": undefined,
    },
    "locale": "fr",
    "name": "nested-route___fr",
    "path": "/fr/nested/route",
  },
]
`;

exports[`Module configuration > simple 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about/index.vue",
        "i18n": {
          "en": undefined,
        },
        "locale": "en",
        "name": "about___en",
        "path": "",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "path": "/about",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about/index.vue",
        "i18n": {
          "ja": undefined,
        },
        "locale": "ja",
        "name": "about___ja",
        "path": "",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "i18n": {
      "ja": false,
    },
    "locale": "ja",
    "meta": {
      "__i18n": false,
    },
    "path": "/ja/about",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about/index.vue",
        "i18n": {
          "fr": undefined,
        },
        "locale": "fr",
        "name": "about___fr",
        "path": "",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "i18n": {
      "fr": undefined,
    },
    "locale": "fr",
    "path": "/fr/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/index.vue",
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "index___en",
    "path": "/",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/index.vue",
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "index___ja",
    "path": "/ja",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/index.vue",
    "i18n": {
      "fr": undefined,
    },
    "locale": "fr",
    "name": "index___fr",
    "path": "/fr",
  },
]
`;

exports[`Page components > dynamic route 1`] = `
[
  {
    "children": [],
    "i18n": {
      "fr": undefined,
    },
    "locale": "fr",
    "name": "articles-name___fr",
    "path": "/fr/articles/:name",
  },
]
`;

exports[`Page components > simple 1`] = `
[
  {
    "children": [],
    "i18n": {
      "fr": undefined,
    },
    "locale": "fr",
    "path": "/fr/about",
  },
  {
    "children": [],
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "path": "/ja/about",
  },
]
`;
